# gpu_alpha_tree

./: .gitignore  CMakeLists.txt  README.md  alpha_tree.cu  alpha_tree.cuh  cc_labelling.cu  cc_labelling.cuh  cuda_error.cuh  graph_creation.cu  graph_creation.cuh  image.hh  main.cu  thrust-config.cmake
src/: bench.cc  bench.cu  main.cc  main.cu
src/cpu_implem/: alpha_tree_cpu.cc  alpha_tree_cpu.hh
src/gpu_implem/: alpha_tree.cuh  alpha_tree_gpu.cu  alpha_tree_gpu.cuh  cc_labelling_gpu.cu  graph_creation.cuh
src/utils/: cuda_error.cuh  image.cu  image.cuh
tests/: test_basic_merge.cu  test_example.cc
